# lms_mobile_bridge

./: .gitignore  README.md  license.txt  pyproject.toml
lms_mobile_bridge/: dev_seed.py  hooks.py  install.py  modules.txt  patches.txt
lms_mobile_bridge/api/: firebase_auth.py  test_firebase_auth.py
lms_mobile_bridge/helpers/: firebase_token.py  user_provisioning.py
lms_mobile_bridge/lms_mobile_bridge/doctype/firebase_auth_settings/: firebase_auth_settings.json  firebase_auth_settings.py
lms_mobile_bridge/lms_mobile_bridge/doctype/firebase_role_mapping/: firebase_role_mapping.json  firebase_role_mapping.py
lms_mobile_bridge/patches/v0_1/: create_firebase_uid_field.py
