[project]
name = "lms_mobile_bridge"
authors = [
    { name = "TinyTotClub" }
]
description = "Firebase Auth bridge for Frappe LMS mobile apps (mobile_control companion)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "google-auth>=2.23,<3",
    "cachecontrol>=0.13,<1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E501", # line too long
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[project.urls]
Homepage = "https://github.com/TinyTotClub/lms_mobile_bridge"
Repository = "https://github.com/TinyTotClub/lms_mobile_bridge"
